! fix highlight ! fix Event --> CustomEvent ~ hide popover arrow on mobile

--- a/src/scss/stickerpipe.scss
+++ b/src/scss/stickerpipe.scss
@@ -14,6 +14,14 @@ $borderRadius: 3px;
 	height: 350px; // todo remove
 	width: 320px;
 
+	@media (max-width: $screen-sm-min) {
+		& {
+			border: 0;
+			box-shadow: none;
+			border-radius: 0 0;
+		}
+	}
+
 	-webkit-box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.15);
 	-moz-box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.15);
 	box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.15);
@@ -29,6 +37,13 @@ $borderRadius: 3px;
 	}
 
 	.sp-arrow {
+
+		@media (max-width: $screen-sm-min) {
+			& {
+				display: none;
+			}
+		}
+
 		bottom: -11px;
 		margin-left: 1px;
 		border-top-color: rgba(0,0,0,.25);
@@ -95,7 +110,7 @@ $borderRadius: 3px;
 			}
 
 			&.sp-tab-active {
-				background-color: white;
+				background: rgba(0, 0, 0, 0.1);
 				color: orange;
 
 				img {
